PR/57166: John Dundas: Correct error code byte order in error message